[gd_scene load_steps=14 format=3 uid="uid://cqoi8xafbf0la"]

[ext_resource type="Script" uid="uid://c0qnnn2aga361" path="res://scripts/client.gd" id="1_uj3pq"]
[ext_resource type="PackedScene" uid="uid://bve05q6f20fac" path="res://scenes/grid.tscn" id="2_x1b1h"]
[ext_resource type="PackedScene" uid="uid://cusvek01dh7yc" path="res://scenes/players.tscn" id="3_iwwvi"]
[ext_resource type="PackedScene" uid="uid://ck4q5unpj0kjx" path="res://scenes/rendering.tscn" id="4_x1b1h"]
[ext_resource type="Material" uid="uid://dfo6ed0j18ikt" path="res://materials/light_blue.tres" id="5_7q5pk"]
[ext_resource type="PackedScene" uid="uid://bvmh7roeorrfe" path="res://scenes/path_markers.tscn" id="5_ifukb"]
[ext_resource type="ArrayMesh" uid="uid://qbqk318i3m7o" path="res://objects/hex_ring.obj" id="6_5pwkw"]
[ext_resource type="ArrayMesh" uid="uid://flyknjrhi1lm" path="res://objects/dot_above.obj" id="7_5pwkw"]
[ext_resource type="PackedScene" uid="uid://cafmkn7hkrkod" path="res://scenes/character_panel.tscn" id="9_cxg6n"]
[ext_resource type="Texture2D" uid="uid://ndert5mhobi6" path="res://misc/icon2.svg" id="10_cujp5"]
[ext_resource type="Texture2D" uid="uid://c2knufc8cgbuf" path="res://misc/icon3.svg" id="11_axtr6"]
[ext_resource type="Texture2D" uid="uid://t7gb3iijwqsv" path="res://misc/icon4.svg" id="12_frd8s"]
[ext_resource type="Texture2D" uid="uid://dv3xtwjpp8tf4" path="res://misc/icon1.svg" id="13_ptw40"]

[node name="Client" type="Node3D"]
script = ExtResource("1_uj3pq")
client_number = 2

[node name="Grid" parent="." instance=ExtResource("2_x1b1h")]

[node name="Players" parent="." instance=ExtResource("3_iwwvi")]

[node name="Rendering" parent="." instance=ExtResource("4_x1b1h")]

[node name="PathMarkers" parent="." instance=ExtResource("5_ifukb")]

[node name="HoverMark" type="MeshInstance3D" parent="."]
material_override = ExtResource("5_7q5pk")
mesh = ExtResource("6_5pwkw")

[node name="TurnMarker" type="MeshInstance3D" parent="."]
material_override = ExtResource("5_7q5pk")
mesh = ExtResource("7_5pwkw")

[node name="InitiativeTracker" type="Node2D" parent="."]

[node name="CharacterPanel1" parent="InitiativeTracker" instance=ExtResource("9_cxg6n")]
position = Vector2(0, 240)
scale = Vector2(1, 1)

[node name="Portrait" type="Sprite2D" parent="InitiativeTracker/CharacterPanel1"]
position = Vector2(40, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_ptw40")

[node name="CharacterPanel2" parent="InitiativeTracker" instance=ExtResource("9_cxg6n")]

[node name="Portrait" type="Sprite2D" parent="InitiativeTracker/CharacterPanel2"]
position = Vector2(40, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cujp5")

[node name="CharacterPanel3" parent="InitiativeTracker" instance=ExtResource("9_cxg6n")]
position = Vector2(0, 90)
scale = Vector2(1, 1)

[node name="Portrait" type="Sprite2D" parent="InitiativeTracker/CharacterPanel3"]
position = Vector2(40, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_axtr6")

[node name="CharacterPanel4" parent="InitiativeTracker" instance=ExtResource("9_cxg6n")]
position = Vector2(0, 165)
scale = Vector2(1, 1)

[node name="Portrait" type="Sprite2D" parent="InitiativeTracker/CharacterPanel4"]
position = Vector2(40, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_frd8s")
